--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,9 @@
 
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvRecetas"
         android:layout_weight="1" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pulsa para cambiar de activity"
-        android:id="@+id/btCambiarPantalla"
-        android:layout_gravity="bottom"
-        android:layout_weight="1" />
 </GridLayout>
