--- a/app/src/main/res/layout/activity_add_receta.xml
+++ b/app/src/main/res/layout/activity_add_receta.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,17 +11,49 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/receta_name" />
+        android:text="@string/receta_name"
+        android:layout_column="0"
+        android:layout_row="0"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etRecetaNombre" />
+        android:id="@+id/etRecetaNombre"
+        android:layout_column="0"
+        android:layout_row="1"/>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tvIngredienteName"
+        android:layout_column="0"
+        android:layout_row="2"/>
+
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etIngredienteName"
+        android:layout_column="0"
+        android:layout_row="3"/>
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerAddRecetaCantidades"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/spinnerAddRecetaMedidas"
+        android:layout_column="0"
+        android:layout_row="4"/>
 
-</LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Añadir ingrediente"
+        android:id="@+id/btAddIngrediente"
+        android:layout_column="0"
+        android:layout_row="5"/>
+
+
+
+</GridLayout>
