--- a/app/src/main/res/layout/activity_add_receta.xml
+++ b/app/src/main/res/layout/activity_add_receta.xml
@@ -46,13 +46,27 @@
         android:layout_column="0"
         android:layout_row="4"/>
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerAddRecetaCantidades"
+        android:layout_column="0"
+        android:layout_row="5"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Añadir ingrediente"
         android:id="@+id/btAddIngrediente"
         android:layout_column="0"
-        android:layout_row="5"/>
+        android:layout_row="6"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvRecetaIngredientes"
+        android:layout_column="0"
+        android:layout_row="7" />
 
 
 
