--- a/app/src/main/res/layout/activity_add_receta.xml
+++ b/app/src/main/res/layout/activity_add_receta.xml
@@ -18,7 +18,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etRecetaNombre"
+        android:id="@+id/etRecetaName"
         android:layout_column="0"
         android:layout_row="1"/>
 
