--- a/app/src/main/res/menu/menu_add_receta.xml
+++ b/app/src/main/res/menu/menu_add_receta.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.oscar.cocina.AddRecetaActivity">
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/guardar_receta"
         android:title="Guardar"
         android:orderInCategory="100"
         android:showAsAction="always"
