--- a/app/src/main/res/layout/activity_add_receta.xml
+++ b/app/src/main/res/layout/activity_add_receta.xml
@@ -1,4 +1,4 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,24 +11,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/receta_name"
-        android:layout_column="0"
-        android:layout_row="0"/>
+        android:text="@string/receta_name"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etRecetaName"
-        android:layout_column="0"
-        android:layout_row="1"/>
+        android:id="@+id/etRecetaName"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tvIngredienteName"
-        android:layout_column="0"
-        android:layout_row="2"/>
+        android:text="@string/tvIngredienteName"/>
 
 
 
@@ -36,38 +30,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etIngredienteName"
-        android:layout_column="0"
-        android:layout_row="3"/>
+        android:hint="Nombre"/>
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerAddRecetaMedidas"
-        android:layout_column="0"
-        android:layout_row="4"/>
+        android:id="@+id/spinnerAddRecetaMedidas" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerAddRecetaCantidades"
-        android:layout_column="0"
-        android:layout_row="5"/>
+        android:id="@+id/spinnerAddRecetaCantidades"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Añadir ingrediente"
-        android:id="@+id/btAddIngrediente"
-        android:layout_column="0"
-        android:layout_row="6"/>
+        android:id="@+id/btAddIngrediente" />
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvRecetaIngredientes"
-        android:layout_column="0"
-        android:layout_row="7" />
+        android:id="@+id/lvRecetaIngredientes" />
 
 
 
-</GridLayout>
+</LinearLayout>
