--- a/app/src/main/res/layout/ingredientes_list_item.xml
+++ b/app/src/main/res/layout/ingredientes_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        style="@style/textView_General"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
@@ -14,18 +15,20 @@
 
 
     <TextView
+        style="@style/textView_General"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/tvCantidadIngrediente"
-        android:layout_row="2"
-        android:layout_column="0" />
+        android:layout_row="0"
+        android:layout_column="1" />
 
     <TextView
+        style="@style/textView_General"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/tvMedidaIngrediente"
-        android:layout_row="3"
-        android:layout_column="0" />
+        android:layout_row="0"
+        android:layout_column="2" />
 </GridLayout>
