--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,18 +7,15 @@
 
 
     <style name="MiTema" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- START CUSTOM -->
-
-        <!-- END CUSTOM -->
+        <item name="android:textViewStyle">@style/textView_General</item>
 
     </style>
 
     <!-- Text view general -->
     <style name="textView_General">
         <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">fill_parent</item>
         <item name="android:textColor">#000</item>
-        <item name="android:typeface">monospace</item>
     </style>
 
 </resources>
