--- a/app/src/main/res/layout/ingrediente_edit_fragment.xml
+++ b/app/src/main/res/layout/ingrediente_edit_fragment.xml
@@ -5,32 +5,31 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:background="@mipmap/ic_launcher" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text=""
-            android:id="@+id/tvNombre" />
 
-        <TextView
+        <EditText
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text=""
-            android:id="@+id/tvDificultad" />
+            android:id="@+id/etIngredienteNameEdit"
+            android:hint="Sal..."/>
+
+        <Spinner
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/spinnerAddRecetaCantidadesEdit"/>
+
+        <Spinner
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:id="@+id/spinnerAddRecetaMedidasEdit" />
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
