--- a/app/src/main/res/menu/menu_add_receta.xml
+++ b/app/src/main/res/menu/menu_add_receta.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.oscar.cocina.AddRecetaActivity">
+    tools:context="com.example.oscar.cocina.controlador.AddRecetaActivity">
     <item android:id="@+id/guardar_receta"
         android:title="Guardar"
         android:orderInCategory="100"
