--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,9 @@
 
 
     <style name="MiTema" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:textViewStyle">@style/color_General</item>
+        <item name="android:textColor">#FFF</item>
+        <item name="android:background">#1990A1</item>
 
-        <item name="android:spinnerItemStyle">@style/color_General</item>
-    </style>
-
-    <!-- Text view general -->
-    <style name="color_General">
-        <item name="android:textColor">#000</item>
     </style>
 
 </resources>
