--- a/app/src/main/res/layout/activity_add_receta.xml
+++ b/app/src/main/res/layout/activity_add_receta.xml
@@ -50,7 +50,7 @@
         android:orientation="horizontal">
 
 
-        <EditText
+        <AutoCompleteTextView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
