--- a/app/src/main/res/layout/recetas_list_item.xml
+++ b/app/src/main/res/layout/recetas_list_item.xml
@@ -9,10 +9,10 @@
         android:layout_height="fill_parent"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@mipmap/ic_launcher" />
+            android:background="@drawable/default_receta" />
 
         <TextView
             android:layout_width="fill_parent"
