--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,26 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="MiTema" parent="android:Theme.Holo">
+        <item name="android:actionBarStyle">@style/ActionBarStyle</item>
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:autoCompleteTextViewStyle">@style/AutocompleteStyle</item>
     </style>
 
+    <style name="ActionBarStyle" parent="android:Widget.Holo.ActionBar">
 
-    <style name="MiTema" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:textColor">#FFF</item>
-        <item name="android:background">#1990A1</item>
-
+        <item name="android:background">@color/backgroundActionBar</item>
+        <item name="android:icon">@drawable/chef_icon</item>
     </style>
+
+    <style name="EditTextStyle" parent="android:Widget.Holo.EditText">
+        <item name="android:textColor">@color/textColorEditText</item>
+    </style>
+    <style name="AutocompleteStyle" parent="android:Widget.Holo.AutoCompleteTextView">
+        <item name="android:textColor">@color/textColorAutocomplete</item>
+    </style>
+    
+
 
 </resources>
