--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,27 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
 
+    <TextView
+        style="@style/tituloStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_titulo_receta"
+        android:id="@+id/textView"
+        android:layout_row="0"
+        android:layout_column="0" />
+
     <ListView
+        style="@style/listViewRecetasStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvRecetas"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_row="1"
+        android:layout_column="0" />
+
+
 
 </GridLayout>
