--- a/app/src/main/res/layout/recetas_list_item.xml
+++ b/app/src/main/res/layout/recetas_list_item.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/layoutRecetasListItemStyle"
+    android:id="@+id/layoutRecetasListItem"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/default_receta" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text=""
-            android:id="@+id/tvNombre" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text=""
-            android:id="@+id/tvDificultad" />
-
-    </LinearLayout>
+    android:layout_height="match_parent"
+    android:columnCount="4">
+    <ImageView
+        android:layout_gravity="center_vertical"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/default_receta" />
 
 
+    <TextView
+        android:paddingLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:layout_columnWeight="1"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="NOMBRE"
+        android:id="@+id/tvNombre" />
+
+    <TextView
+        android:layout_gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dificultad: "
+        android:id="@+id/labelDificultad"
+        android:layout_column="2"
+        android:layout_row="0" />
+
+    <TextView
+        android:layout_gravity="center_vertical"
+        android:layout_columnWeight="1"
+        android:layout_column="3"
+        android:layout_row="0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DIFICULTAD"
+        android:id="@+id/tvDificultad" />
 
 
-</LinearLayout>
+
+
+</GridLayout>
