--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,32 @@
     <style name="AutocompleteStyle" parent="android:Widget.Holo.AutoCompleteTextView">
         <item name="android:textColor">@color/textColorAutocomplete</item>
     </style>
-    
+
+    <style name="tituloStyle" parent="android:Widget.Holo.TextView">
+        <item name="android:background">@drawable/titulo_style</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:strokeWidth">10</item>
+        <item name="android:strokeColor">#000</item>
+    </style>
+    <style name="listViewRecetasStyle" parent="android:Widget.Holo.ListView">
+
+
+    </style>
+
+    <style name="layoutRecetasListItemStyle" parent="android:Widget.Holo.GridView">
+        <item name="android:background">@drawable/item_receta_style</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:gravity">center_vertical</item>
+
+    </style>
+
+    <style name="etRecetaNameStyle" parent="android:Widget.Holo.TextView">
+        <item name="android:gravity">center_horizontal</item>
+    </style>
 
 
 </resources>
