--- a/app/src/main/res/layout/ingredientes_list_item.xml
+++ b/app/src/main/res/layout/ingredientes_list_item.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:id="@+id/tvCantidadIngrediente"
+        android:id="@+id/tvUnidadIngrediente"
         android:layout_row="0"
         android:layout_column="1" />
 
