--- a/app/src/main/res/layout/ingredientes_list_item.xml
+++ b/app/src/main/res/layout/ingredientes_list_item.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    style="@style/layoutIngredientesListItemStyle"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:columnCount="3">
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text=""
         android:id="@+id/tvNombreIngrediente"
         android:layout_row="0"
-        android:layout_column="0" />
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:textColor="@color/textColorTextviewListIngredientes"/>
 
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text=""
         android:id="@+id/tvUnidadIngrediente"
         android:layout_row="0"
-        android:layout_column="1" />
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:textColor="@color/textColorTextviewListIngredientes"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:text=""
         android:id="@+id/tvMedidaIngrediente"
         android:layout_row="0"
-        android:layout_column="2" />
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:textColor="@color/textColorTextviewListIngredientes"/>
+
 </GridLayout>
