--- a/app/src/main/res/layout/recetas_list_item.xml
+++ b/app/src/main/res/layout/recetas_list_item.xml
@@ -7,11 +7,14 @@
     android:layout_height="match_parent"
     android:columnCount="4">
     <ImageView
+        android:id="@+id/imagenReceta"
         android:layout_gravity="center_vertical"
         android:layout_column="0"
         android:layout_row="0"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
         android:background="@drawable/default_receta" />
 
 
